test/MC/AArch64/SVE/frsqrts-diagnostics.s
// RUN: not llvm-mc -triple=aarch64 -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s

// Invalid element kind.
frsqrts z5.d, z0.d, z31.x
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: Invalid SVE element size qualifier
// CHECK-NEXT: frsqrts z5.d, z0.d, z31.x
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:

// Element size specifiers should match.
frsqrts z23.d, z24.d, z10.b
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: invalid operand
// CHECK-NEXT: frsqrts z23.d, z24.d, z10.b
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:

